<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>Food</artifactId>
  <dependencies>
    <dependency>
      <artifactId>Units</artifactId>
      <groupId>org.ntnu.units</groupId>
    </dependency>
    <dependency>
      <artifactId>junit-jupiter</artifactId>
      <groupId>org.junit.jupiter</groupId>
    </dependency>
    <dependency>
      <artifactId>Console</artifactId>
      <groupId>org.ntnu.console</groupId>
  </dependency>
    <dependency>
      <groupId>io.micronaut.validation</groupId>
      <artifactId>micronaut-validation</artifactId>
    </dependency>
    <dependency>
      <groupId>io.micronaut.validation</groupId>
      <artifactId>micronaut-validation-processor</artifactId>
    </dependency>
</dependencies>

  <groupId>org.ntnu.food</groupId>
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <artifactId>FoodManagementSystem</artifactId>
    <groupId>org.ntnu</groupId>
    <version>1.0-SNAPSHOT</version>
  </parent>
  <properties>
    <maven.compiler.release>23</maven.compiler.release>
    <maven.compiler.source>23</maven.compiler.source>
    <maven.compiler.target>23</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

</project>